Fix on composer.json

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     "require": {
         "php": ">=8.0",
         "composer/installers": "^2.0",
+        "cweagans/composer-patches": "^1.0",
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
@@ -92,8 +93,6 @@
             ]
         },
         "enable-patching": true,
-        "composer-exit-on-patch-failure": false,
-        "patches": {
-        }
+        "composer-exit-on-patch-failure": false
     }
 }
